internalAMS/force-app/main/default/objects/Maintenance__c/fields/Asset_Received_For_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Asset_Received_For_Maintenance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asset Received For Maintenance</label>
    <type>Checkbox</type>
</CustomField>