internalAMS/force-app/main/default/objects/Maintenance__c/fields/Assets__c.field-meta.xml
<CustomField>
    <fullName>Assets__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assets</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Maintenances</relationshipLabel>
    <relationshipName>Maintenances</relationshipName>
    <type>Lookup</type>
</CustomField>