internalAMS/force-app/main/default/objects/Maintenance__c/fields/Maintenance_Cost__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Cost__c</fullName>
    <inlineHelpText>The expense on maintenance.</inlineHelpText>
    <label>Maintenance Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>