internalAMS/force-app/main/default/objects/Maintenance__c/fields/Maintenance_Name__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Name__c</fullName>
    <label>Maintenance Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>