internalAMS/force-app/main/default/objects/Maintenance__c/fields/Maintenance_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Start_Date__c</fullName>
    <label>Maintenance Start Date</label>
    <type>Date</type>
</CustomField>