internalAMS/force-app/main/default/objects/Maintenance__c/fields/Maintenance_Type__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Type__c</fullName>
    <label>Maintenance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Maintenance</fullName>
            </value>
            <value>
                <fullName>Hardware update</fullName>
            </value>
            <value>
                <fullName>Software Update</fullName>
            </value>
            <value>
                <fullName>HVAC Maintenance</fullName>
            </value>
            <value>
                <fullName>Routine Maintenance</fullName>
            </value>
            <value>
                <fullName>Warranty Service</fullName>
            </value>
            <value>
                <fullName>Battery Replacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>