internalAMS/force-app/main/default/objects/Maintenance__c/validationRules/Previous_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Previous_Date_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>Maintenance_Start_Date__c  &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Asset_Received_For_Maintenance__c</errorDisplayField>
    <errorMessage>Maintenance start date can not be a previous date</errorMessage>
</ValidationRule>